# easter

./: README.md  com.github.alexkdeveloper.easter.json  meson.build  snapcraft.yaml
data/: com.github.alexkdeveloper.easter.appdata.xml.in  com.github.alexkdeveloper.easter.desktop.in  com.github.alexkdeveloper.easter.gschema.xml  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  cs.po  hu.po  it.po  meson.build  nl.po  ru.po  sk.po
src/: easter.gresource.xml  main.vala  meson.build  window.ui  window.vala
